# skey_chord

./: .gitignore  Dockerfile  example_training.py  gcloud.sh  pyproject.toml  test_dataloader.py  test_model.py  test_pseudolabel.py
chord/: callbacks.py  main.py  pseudo_label.py  stone.py  stone_loss.py  training_loop.py
chord/config/: selfsupervised.gin
chord/dataloader/: __init__.py  main.py  main_supervised.py  supervised_data.py  synth_data.py
chord/evaluation/: relative_pitch_profile.py
chord/model/: chromanet.py  hcqt.py
chord/utils/: gin.py  parallel.py  scheduler.py  training.py
