[tool.poetry]
name = "stone"
version = "0.0.1"
description = "Stone for ISMIR 2024, let's go get it!"
authors = ["Research <research@deezer.com>"]
readme = "README.md"
repository = "https://github.com/Yuexuan-Kong/STONE"
packages = [
    { include = "chord" },
]

[[tool.poetry.source]]
name = "research"
url = "https://artifacts.deez.re/repository/python-research/simple/"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
torch = "2.0.0"
torchaudio = "2.0.1"
torchvision = "0.15.1"
tensorflow = "2.12.*"
deezer-datasource = "3.9.*"
deezer-audio = {extras = ["resampling"], version = "4.2.*"}

[tool.poetry.group.dev.dependencies]
tqdm = "4.65.*"
torchinfo = "1.7.*"
matplotlib = "3.7.*"
gin-config = "0.5.*"
GPUtil = "1.4.*"
tensorflow-io = "0.32.*"
einops = "0.6.*"
scipy = "1.10.*"
pandas = "1.5.*"
openpyxl = "3.1.*"
google-cloud-bigquery = "3.9.*"
google-cloud-storage = "2.8.*"
google-auth = "2.17.*"
ipython = "8.12.*"
ujson = "5.7.*"
timm = "0.6.*"
hvac = "1.1.*"
pymysql = "1.0.*"
dbutils = "3.0.*"
audioread = "3.0.*"
torchmetrics = "0.11.*"
weightwatcher = "0.7.*"
Unidecode = "1.3.*"
mypy = "*"
black = "*"
isort = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-asyncio = "*"
pytest = "*"
flake8 = "*"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
